<?xml version="1.0" encoding="utf-8"?>
<resources>


    <string name="app_name">GeekTweet</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="action_login">Login</string>
    <string name="action_home">Home</string>
    <string name="action_search">Search</string>
    <string name="action_logout">Logout</string>
    <string name="title_activity_login_to_twitter">LoginToTwitter</string>
    <color name="blue">#0000FF</color>
    <string-array name="items_array">
        <item>Search</item>
        <item>Home</item>

    </string-array>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>

</resources>
