<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.migliori.start.geektweek.MainActivity" >
    
    <item android:id="@+id/action_settings"
        android:title="@string/action_settings"
        android:orderInCategory="100"
        android:showAsAction="never" />
    <item android:id="@+id/action_login"
        android:title="@string/action_login"
        android:orderInCategory="100"
        android:showAsAction="never" />
    <item android:id="@+id/action_logout"
        android:title="@string/action_logout"
        android:orderInCategory="100"
        android:showAsAction="never" />
    <item android:id="@+id/action_home"
        android:title="@string/action_home"
        android:orderInCategory="100"
        android:showAsAction="never" />
    <item android:id="@+id/action_search"
        android:title="@string/action_search"
        android:orderInCategory="100"
        android:showAsAction="never" />
</menu>
